clean up api
